# agentos-mcp

./: .env.example  .gitignore  MANIFEST.in  README.md  config.py  daemon.py  database.py  gateway.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
approval/: executor.py  queue.py  webhook.py
approval/actions/: goal_actions.py  memory_actions.py  system_actions.py
daemon/: writer.py
daemon/jobs/: __init__.py  goal_monitor_job.py  memory_decay_job.py  reflection_analyzer_job.py  self_maintenance_job.py
daemon_pkg/: writer.py
daemon_pkg/jobs/: __init__.py
events/: bus.py  dispatcher.py  schema.py  store.py
events/handlers/: goal_handlers.py  memory_handlers.py  reflection_handlers.py
graph/: extractor.py  schema.py  store.py  traversal.py
modules/context/: snapshot.py
modules/goals/: manager.py  prioritizer.py  schema.py
modules/memory/: importance.py  retriever.py  schema.py  store.py
modules/reflection/: analyzer.py  logger.py  schema.py
tests/: test_agentos.py
tools/: approval_tools.py  context_tools.py  goal_tools.py  graph_tools.py  memory_tools.py  reflection_tools.py
